[package]
name = "cli-rs"
authors = ["Natalia Maximo <iam@natalia.dev>"]
version = "0.1.0"
edition = "2021"
description = "A template project to bootstrap new CLIs in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", default-features = false, features = [
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", optional = true }

[build-dependencies]
clap = { version = "4.5.4", default-features = false, features = [
    "help",
    "usage",
    "derive",
] }
clap_mangen = "0.2.20"

[features]
default = ["env", "colors", "wrap_help"]
env = ["clap/env"]
wrap_help = ["clap/wrap_help"]
colors = ["clap/color"]
bin = ["tracing-subscriber"]

[profile.release]
strip = true

[[bin]]
name = "cli"
required-features = ["bin"]
path = "src/main.rs"
